fixed alignments in spotemonview

--- a/src/app/views/spotemon/spotemon.scss
+++ b/src/app/views/spotemon/spotemon.scss
@@ -42,7 +42,7 @@ div#spotemon {
 	#results{
 		position: relative;
 		margin-left: 20pt;
-		top: -50px;
+		top: -160px;
 		.name{
 		    font-family: $helMed;
 		    color: $green;
@@ -69,7 +69,7 @@ div#spotemon {
 	    margin: 8% 0;
 	    margin-left: 53pt;
 	    position: relative;
-	    top: -50px;
+	    top: -110px;
 
 	    img{
 	      height:100%;
